# WackyLang

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md  TODO ideas.txt  TODO_BACKEND.txt  andrei-extensions.txt  arrayLookup  arrayLookup.s  clippy.toml  resources + TODO ideas.txt  test.wacc  test2.wacc  wacc_report.tex
backend/: Cargo.toml
backend/src/: assembly_ast.rs  assembly_fix.rs  assembly_trans.rs  emission.rs  future_types_playground.rs  gen_flags.rs  gen_predefined.rs  lib.rs  predefined.rs  regalloc.rs  registers.rs  replace_pseudo.rs  types.rs
backend/src/predefined_funcs/: array_access.txt  chr_bounds.txt  div_zero.txt  exit.txt  free.txt  free_pair.txt  malloc.txt  null_access.txt  oom.txt  overflow.txt  print_bool.txt  print_chr.txt  print_int.txt  print_ptr.txt  print_str.txt  println.txt  read_chr.txt  read_int.txt
compiler/: Cargo.toml
compiler/src/: main.rs
compiler/tests/: full_compiler_test.rs
compiler/tests/common/: mod.rs
fn_pipe/: Cargo.toml
fn_pipe_proc/: Cargo.toml
frontend/: Cargo.toml  plan.txt
frontend/src/: lib.rs  multi_item.rs  node.rs  source.rs
frontend/src/hir/: hir_ast.rs  mod.rs
frontend/src/parsing/: ast.rs  ast_frame.rs  lexer.rs  mod.rs  multi_item.rs  parse_ast.rs  parser.rs  token.rs
frontend/src/wacc_hir/: hir.rs  lower_ast.rs  mod.rs
frontend/src/wacc_thir/: lower_hir.rs  mod.rs  optimizations.rs  thir.rs  type_set.rs  types.rs
frontend/tests/: valid.rs
frontend/tests/common/: mod.rs
middle/: Cargo.toml  pie_in_the_sky_ideas.txt
middle/src/: ast_transform.rs  lib.rs  thir_transform.rs  types.rs  types_future_playground.rs  wack_type.rs  wackir.rs
middle/src/optimizations/: cfg.rs  constant_folding.rs  copy_prop.rs  dead_store_elim.rs  mod.rs  unreachable_code_elim.rs
opt-test/: README.md
opt-test/benchmarking/: fibonacciIt.wacc  fibonacciTailRec.wacc  fixedPointLoop.wacc  helper.py  longSplitExpr2Long.wacc  longSplitLoop.wacc  manyArgs.wacc  mediumSplitExprLoop.wacc  printAllTypesLong.wacc  printAllTypesMedium.wacc
opt-test/benchmarking/result/: printAllTypesMedium.txt  printAllTypesResult.txt
opt-test/const-fold/: README.md  boolExpr.wacc  charCompare.wacc  divZero.wacc  intExpr.wacc  overflow.wacc
opt-test/copy-prop/: intCalc.wacc
opt-test/deadstore/: longSplitExpr.wacc
opt-test/unreachable_code/: if_false.wacc  intmultOverflow.wacc
src/: ast.rs  lib.rs  main.rs  parser.rs  shared.rs  spanned.rs  token.rs
syntax/: Cargo.toml
syntax/src/: ast.rs  error.rs  fold_program.rs  lib.rs  main.rs  node.rs  nonempty.rs  parser.rs  rename.rs  source.rs  token.rs  typecheck.rs  types.rs
syntax/tests/: semantic_err.rs  syntax_err.rs  valid.rs
syntax/tests/common/: mod.rs
test_cases/: exit-1.txt  read.txt
test_cases/invalid/syntaxErr/extensions/if_expressions/: ifElifNoElse.wacc  ifNoFi.wacc
test_cases/invalid/syntaxErr/extensions/if_statements/: functionIfElifOnlyReturn.wacc
test_cases/valid/array/: emptyArrayReplace.wacc
test_cases/valid/expressions/: binaryIntLiteral.wacc  hexIntLiteral.wacc  octIntLiteral.wacc
test_cases/valid/extensions/if_expressions/: ifExprBasic.wacc  ifExprElif.wacc  ifExprManyElifs.wacc
test_cases/valid/extensions/if_statements/: ifElifBasic.wacc  ifElifElseBasic.wacc  ifManyElifs.wacc  ifNoElse.wacc
test_cases/valid/extensions/loop_constructs/: breakBasic.wacc  doWhileBasic.wacc  loopDoBasic.wacc  loopLabels.wacc  nextloopBasic.wacc
test_cases/valid/extensions/tailrec/: factorialTailRec.wacc  fibonacciTailRec.wacc  returnMaxInt.wacc
test_cases/valid/function/nested_functions/: factorialTailRec.wacc
testsuite/: generate_expected.py  test.py
testsuite/expected/array/: array.wacc  arrayPrint.wacc  printRef.wacc
testsuite/expected/function/nested_functions/: printInputTriangle.wacc
testsuite/expected/function/simple_functions/: functionManyArguments.wacc  usesArgumentWhilstMakingArgument.wacc
testsuite/expected/pairs/: checkRefPair.wacc  printPair.wacc  printPairOfNulls.wacc
testsuite/expected/runtimeErr/arrayOutOfBounds/: arrayNegBounds.wacc  arrayOutOfBoundsWrite.wacc
testsuite/expected/runtimeErr/badChar/: negativeChr.wacc  tooBigChr.wacc
testsuite/expected/runtimeErr/divideByZero/: modByZero.wacc
testsuite/expected/runtimeErr/integerOverflow/: intJustOverflow.wacc  intUnderflow.wacc  intWayOverflow.wacc  intmultOverflow.wacc  intnegateOverflow2.wacc  intnegateOverflow3.wacc  intnegateOverflow4.wacc
testsuite/expected/runtimeErr/nullDereference/: readNull1.wacc
testsuite/expected/scope/: printAllTypes.wacc
testsuite/test_cases/array/: emptyArrayPrint.wacc
testsuite/test_cases/pairs/: checkRefPair.wacc
util/: Cargo.toml
util/fn_pipe/: Cargo.toml
util/fn_pipe/proc/: Cargo.toml
util/src/: cfg.rs  dyn_traits.rs  gen_flags.rs  lib.rs  nonempty.rs  opt_flags.rs  recursion.rs  rust_gadt_playground.rs
util/src/apply/: curry2.rs  mod.rs
util/src/func/: compose.rs  curry2.rs  mod.rs
util/src/recursion/: compose.rs  fix.rs  list.rs  mod.rs
util/src/typelevel/: is.rs  maybe.rs  mod.rs
