[package]
name = "backend"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
doctest = false
name = "backend"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
syntax = { workspace = true }
middle = { workspace = true }
util = { workspace = true }
once_cell = { workspace = true }
