[package]
name = "backend"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
doctest = false
name = "backend"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
middle = { workspace = true }
util = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
bitflags = { workspace = true }
