[package]
name = "compiler"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
syntax = { workspace = true }
middle = { workspace = true }
backend = { workspace = true }
ariadne = { workspace = true }
util = { workspace = true }

chumsky = { workspace = true, features = [
  "std",
  "stacker",
  "memoization",
  "pratt",
  "regex",
  "nightly",
] }
clap = { workspace = true, features = ["derive"] }
regex = { workspace = true }

# Used for testing the compiler with different optimization flags
[features]
const-fold = []
copy-prop = []
dead-store-elim = []
unreachable-code = []
