[package]
name = "compiler"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
frontend = { workspace = true }
middle = { workspace = true }
backend = { workspace = true }
ariadne = { workspace = true }
util = { workspace = true }
# Only used for testing graphviz output
internment = { workspace = true }

chumsky = { workspace = true, features = [
  "std",
  "stacker",
  "memoization",
  "pratt",
  "regex",
  "nightly",
] }
clap = { workspace = true, features = ["derive"] }
regex = { workspace = true }

# Default binary
[[bin]]
name = "compiler"
path = "src/main.rs"

# Binary used for testing various features such as graphviz
[[bin]]
name = "graphviz"
path = "src/bin/graphviz_output.rs"

# Used for testing the compiler with different optimization flags
[features]
fold = []
copy-prop = []
rm-unreachable = []
rm-dead-stores = ["fold"]
reg-alloc = []
reg-coalesce = []
optimize-all = [
  "fold",
  "copy-prop",
  "rm-unreachable",
  "rm-dead-stores",
  "reg-alloc",
  "reg-coalesce",
]
optimize-one = [
  "fold",
  "copy-prop",
  "rm-unreachable",
  "rm-dead-stores",
  "reg-alloc",
]
