[package]
name = "frontend"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
doctest = false
name = "frontend"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
# macro dependencies
extend = { workspace = true }
delegate = { workspace = true }
impl-trait-for-tuples = { workspace = true }
derive_more = { workspace = true }

# utility dependencies
util = { workspace = true }
fn_pipe = { workspace = true }
thiserror = { workspace = true }
internment = { workspace = true }
recursion = { workspace = true }
generativity = { workspace = true }
itertools = { workspace = true }

# parsing and error reporting
ariadne = { workspace = true }
parse_int = { workspace = true }
chumsky = { workspace = true, features = [
    "std",
    "stacker",
    "memoization",
    "pratt",
    "regex",
    "nightly",
] }

