[package]
name = "middle"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
doctest = false
name = "middle"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
syntax = { workspace = true }
internment = { workspace = true, features = ["arc"] }
thiserror = { workspace = true }
util = { workspace = true }
