[package]
name = "middle"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
doctest = false
name = "middle"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
frontend = { workspace = true }
internment = { workspace = true, features = ["arc"] }
thiserror = { workspace = true }
extend = { workspace = true }
util = { workspace = true }
itertools = { workspace = true }
derive_more = { workspace = true }
