[package]
name = "wacc_syntax"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
# macro dependencies
extend = "1.2"
delegate = "0.13"
impl-trait-for-tuples = "0.2.3"

# utility dependencies
fn_pipe = { path = "../fn_pipe" }
thiserror = "2"
internment = { version = "0.8.6", features = ["arc"] }

# parsing and error reporting
chumsky = { features = ["std", "stacker", "memoization", "pratt", "regex", "nightly"], git = "https://github.com/zesterer/chumsky", rev = "282bf5e" } # currently latest chumsky commit
ariadne = "0.5.0"

