[package]
name = "util"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
doctest = false
name = "util"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
# utility dependencies
thiserror = { workspace = true }
bitflags = { workspace = true }
once_cell = { workspace = true }

# for now we only use bon in this crate 
# but if we use it elsewhere, include it in the workspace
bon = "3.4.0"
